@@ -1,5 +1,16 @@
 2013-09-29  Paul Smith  <psmith@gnu.org>
 
+	* output.c (output_dump): Always write Enter/Leave messages to stdio.
+	(log_working_directory): This now always writes to stdio, so we
+	don't need the struct output parameter anymore.
+	(output_start): Show the working directory when output_sync is not
+	set or is recursive.
+	* main.c (main): Ensure the special "already shown Enter message"
+	token is removed from MAKE_RESTARTS before the user can see it.
+	* function.c (func_shell_base): If the output_context stderr
+	exists but is invalid, write to the real stderr.
+	Fixes suggested by Frank Heckenbach <f.heckenbach@fh-soft.de>.
+
 	* output.c: Guard unistd.h inclusion, add io.h.
 	* gnumake.h: Move GMK_EXPORT before the declarations.
 	* make_msvc_net2003.vcproj: Add missing files.
